2.0.1
------
- Improved optimization in ContentOperations::SetAllHierarchyPositions
- Fixed return type of ContentOperations::GetPageIdFromAlias()
- help for the {cms_html_options} plugin.
- Change the default page template to use {Navigator}
- Explicitly force $smarty->fetch() to create a new template, and therefore a new scope.  Keep track of scopes in a stack.
- SITENAME is now assigned as a smarty global.
- Fix problem with changing content types.
- Fix problem with CmsLayoutTemplateQuery wrt the editable option, that generated an SQL error.
  (resolves problems where people have additional editor access to templates, but no other design manager permissions).
- Fix minor javascript error (error checking).

CMSContentManager v1.0.1
- Fixes for changing content types.

DesignManager v1.0.1
- Clear the type_default flag when copying a template.
- Clear any locks if an exception occurred while submitting a template.

MenuManager v1.50.1
- Changes to createSmartyTemplate calls (now use $smarty->get_template_parent())

Navigator v1.0.1
- Changes to createSmartyTemplate calls (now use $smarty->get_template_parent())

Search v1.50.1
- Changes to createSmartyTemplate calls (now use $smarty->get_template_parent())

News v2.50.1
- Changes to createSmartyTemplate calls (now use $smarty->get_template_parent())

==================================================
The CHANGELOG is cleared for the CMSMS 2.0 release
==================================================